<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/movieDetails_banner_placeholder"
                android:layout_width="match_parent"
                android:layout_height="240.5dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/progress_animation"/>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@+id/movieDetails_banner_placeholder"
                tools:layout_editor_absoluteX="16dp">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        android:background="@color/gray"/>
                </com.facebook.shimmer.ShimmerFrameLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:textColor="@color/rate_color"
                                android:background="@color/gray"
                                android:textSize="32dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:orientation="vertical"
                            android:paddingVertical="4dp">

                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:textColor="@color/gray"
                                android:background="@color/gray"/>

                            <TextView
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textColor="@color/gray"
                                android:background="@color/gray"/>

                        </LinearLayout>
                    </LinearLayout>
                </com.facebook.shimmer.ShimmerFrameLayout>

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="@color/link_color"
                android:focusable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/synopsis"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />
                <com.facebook.shimmer.ShimmerFrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ellipsize="end"
                        android:lines="4"
                        android:background="@color/gray"
                        android:textColor="@color/gray" />
                </com.facebook.shimmer.ShimmerFrameLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_more"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/link_color" />

            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="@color/link_color"
                android:focusable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout3"/>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cast_crew"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/view_all"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/link_color" />

                </LinearLayout>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include layout="@layout/cast_item_placeholder"/>
                        <include layout="@layout/cast_item_placeholder"/>
                        <include layout="@layout/cast_item_placeholder"/>
                        <include layout="@layout/cast_item_placeholder"/>

                    </LinearLayout>
                </com.facebook.shimmer.ShimmerFrameLayout>

            </LinearLayout>

            <View
                android:id="@+id/view3"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="@color/link_color"
                android:focusable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout4" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photos"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/view_all"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/link_color" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>